# tathya

./: .env.example  .gitignore  README.md  audit_claims.csv  audit_events.csv  audit_facts.csv  pyproject.toml
.github/workflows/: case-file.yml  embed.yml  ingest.yml
api/: __init__.py  main.py  mappers.py  schemas.py
apps/web/: package-lock.json  package.json
db/: schema.sql  seed_entities_core.sql  seed_sources.sql
db/migrations/: 001_source_activation.sql  002_official_website_sources.sql  003_mark_signal_duplicate.sql  004_case_file_persistence.sql  005_signal_embeddings.sql  (+2 more)
docs/: audit_and_next_steps.md  mission_ethics.md  phase0_phase1_checklist.md  phase2_entry_gate.md  phase2_phase3_audit.md  roadmap_execution_plan.md  source_research.md
pipeline/: __init__.py  audit_export.py  case_file_persist.py  case_file_report.py  cli_encoding.py  duplicate_scan.py  embed_signals.py  gemini_case_file_report.py  scheduler.py  semantic_search.py  source_activation.py  source_audit.py  topic_report.py
shared/: __init__.py  config.py  models.py  slugify.py
tests/: test_api.py  test_audit_export.py  test_case_file_builder.py  test_case_file_persist.py  test_clusterer.py  test_embedder.py  test_embedding_cli.py  test_entity_matcher.py  test_gemini_case_file.py  test_generation_builders.py  test_health_check.py  test_near_duplicate.py  test_rss_watcher.py  test_significance_scorer.py  test_snapshotter.py  test_source_activation.py  test_source_adapters.py  test_source_audit.py  test_supabase_repository.py  test_telegram.py  test_text_cleaner.py  test_topic_report.py
(+68 files in other folders)
