[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tathya"
version = "0.1.0"
description = "Autonomous, non-partisan civic record pipeline for India's Union Government."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "feedparser>=6.0,<7.0",
  "pydantic>=2.7,<3.0",
  "python-dotenv>=1.0,<2.0",
  "youtube-transcript-api>=1.0,<2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9.0"]
embeddings = ["sentence-transformers>=3.0,<4.0"]

[tool.setuptools.packages.find]
include = ["shared*", "pipeline*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
